--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href = "main.css">
+		<link rel="stylesheet" type="text/css" media="all" href="960-Grid-System-master\960-Grid-System-master\code\css\960.css" />
 	</head>
-	<body>
-		<ul class = "nav-bar">
+	<body class="container_12" background="Croped Cover Picture.jpg">
+		<!--header-->
+		<div height="400" position="relative">
+			<img src="Possible cover picture.jpg" position="absolute" class="grid_12"></img>
+			<h1 class="top-text">TEXT</h1>
+			<h1 class="bottom-text">TEXT</h1>
+		</div>
+		<ul class = "nav-bar grid_12">
 			<li>
-				<a class="active" href="index.html">Home</a>
+				<a href="contact.html">Contact us</a>
 			</li>
 			<li>
-				<a href="flock.html">Meet our flock</a>
+				<a href="wool.html">Wool Products</a>
 			</li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">Sheep for sale</a>
@@ -20,12 +27,17 @@
 				</div>
 			</li>
 			<li>
-				<a href="wool.html">Wool Products</a>
+				<a href="flock.html">Meet our flock</a>
 			</li>
 			<li>
-				<a href="contact.html">Contact us</a>
+				<a class="active" href="index.html">Home</a>
 			</li>
 		</ul>
+		<!--header-->
+		<div class="main-body grid_12">
+			<p class="grid_5">TEXT</p>
+			<img src="Me & baaby + Mama.jpg" class="grid_6"></img>
+		</div>
 	</body>
 	<script src="dropdown.js"></script>
 </html>
