--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href = "main.css">
-		<link rel="stylesheet" type="text/css" media="all" href="960-Grid-System-master\960-Grid-System-master\code\css\960.css" />
+		<link rel="stylesheet" type="text/css" media="all" href="960.css" />
 	</head>
 	<body class="container_12" background="Croped Cover Picture.jpg">
 		<!--header-->
